# new_game

./: .gitignore  AGENT_INTEGRATION.md  Cargo.toml  KEY_SETUP.md  PROXY_QUICKREF.py  PROXY_SETUP_GUIDE.md  QUICKSTART.md  README.md  README_SPENDSTEWARD.md  SECURITY.md  SPENDSTEWARD_INTEGRATION.md  SPENDSTEWARD_PROXY.md  bash.exe.stackdump  index.html  run_agent_with_proxy.py  run_agent_with_proxy.sh  run_with_proxy.sh  setup_proxy.py  setup_spendsteward_proxy.sh  setup_venv.sh  transform_zones.py
.github/workflows/: ci.yml  deploy.yml  gamedev-agent.yml
agents/gamedev/: .gitignore  main.py  prompts.py  state.json  tasks.py  tools.py
audits/: AGENT-AUDIT-PROMPT.md  AUDIT-DIMENSIONS.md  AUDIT-ITERATIONS-1-5.md  AUDIT-ITERATIONS-11-15.md  AUDIT-ITERATIONS-6-10.md  AUDIT-SUMMARY.md  scan_long_functions.py
docs/: mmo-model-analysis.md
scripts/: serve_local.ps1
src/: audio.rs  components.rs  constants.rs  main.rs  menu.rs  network.rs  resources.rs  save.rs  settings.rs  setup.rs
src/systems/: collision.rs  crisis.rs  festival.rs  goals.rs  hud.rs  interaction.rs  mod.rs  narrative.rs  npc.rs  player.rs  quests.rs  stats.rs  time.rs  vehicle.rs  visual.rs
wasm-target/: .rustc_info.json
wasm-target/debug/.fingerprint/bumpalo-b768c474d06da439/: lib-bumpalo  lib-bumpalo.json
wasm-target/debug/.fingerprint/proc-macro2-dbee0f5110a7b6c5/: build-script-build-script-build  build-script-build-script-build.json
wasm-target/debug/.fingerprint/quote-e90daa55bbd2c265/: build-script-build-script-build  build-script-build-script-build.json
(+13 files in other folders)
