[package]
name = "new_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Faster compile times in development.
# The extra settings below also avoid sporadic MSVC/Bevy debug-link failures on Windows.
[profile.dev]
opt-level = 1
incremental = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
