[package]
name = "new_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["webgl2"] }
bevy_ecs_tilemap = "0.15"
bevy_tweening = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window", "Storage",
    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent",
    "BinaryType", "Blob",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

# Faster compile times in development.
# The extra settings below also avoid sporadic MSVC/Bevy debug-link failures on Windows.
[profile.dev]
opt-level = 1
incremental = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
